[gd_scene load_steps=4 format=3 uid="uid://cp5omqpwv7i4n"]

[ext_resource type="Script" path="res://scenes/ShopUI.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://iyt7tyukw8le" path="res://assets/art/ShopBackgroundAsset.png" id="2_fmsuw"]
[ext_resource type="Texture2D" uid="uid://gi0ie37uqh6n" path="res://assets/art/ShopItemsAssets.png" id="3_1ehxy"]

[node name="ShopUI" type="Node2D"]
script = ExtResource("2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="background" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0.65098, 0.654902, 0.658824, 1)

[node name="BlackBar1" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 48.0
color = Color(0, 0, 0, 1)

[node name="BlackBar2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_top = 552.0
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="goToMainMenu" type="Button" parent="Control"]
layout_mode = 0
offset_left = 824.0
offset_top = 8.0
offset_right = 1013.0
offset_bottom = 40.0
text = "Go Back to Main Menu"

[node name="ShopBackgroundAsset" type="Sprite2D" parent="."]
position = Vector2(381, 300)
scale = Vector2(4, 4)
texture = ExtResource("2_fmsuw")

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 18.0
offset_top = 13.0
offset_right = 767.0
offset_bottom = 50.0
text = "Coins: 1000000000000"

[node name="Gatorade Button" type="Button" parent="."]
offset_left = 74.0
offset_top = 264.0
offset_right = 139.0
offset_bottom = 329.0

[node name="Gatorade Sprite" type="Sprite2D" parent="Gatorade Button"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
metadata/_edit_lock_ = true

[node name="Candy Button" type="Button" parent="."]
offset_left = 100.0
offset_top = 333.0
offset_right = 167.0
offset_bottom = 398.0

[node name="Candy Sprite" type="Sprite2D" parent="Candy Button"]
position = Vector2(34, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
frame = 2
metadata/_edit_lock_ = true

[node name="Kopiko Button" type="Button" parent="."]
offset_left = 438.0
offset_top = 262.0
offset_right = 505.0
offset_bottom = 327.0

[node name="Kopiko Sprite" type="Sprite2D" parent="Kopiko Button"]
position = Vector2(34, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
frame = 4
metadata/_edit_lock_ = true

[node name="Taho Button" type="Button" parent="."]
offset_left = 511.0
offset_top = 261.0
offset_right = 578.0
offset_bottom = 326.0

[node name="Taho Sprite" type="Sprite2D" parent="Taho Button"]
position = Vector2(34, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
frame = 6
metadata/_edit_lock_ = true

[node name="Milk Button" type="Button" parent="."]
offset_left = 150.0
offset_top = 263.0
offset_right = 217.0
offset_bottom = 328.0

[node name="Milk Sprite" type="Sprite2D" parent="Milk Button"]
position = Vector2(34, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
frame = 8
metadata/_edit_lock_ = true

[node name="Strips Button" type="Button" parent="."]
offset_left = 454.0
offset_top = 332.0
offset_right = 521.0
offset_bottom = 397.0

[node name="Strips Sprite" type="Sprite2D" parent="Strips Button"]
position = Vector2(34, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
frame = 10
metadata/_edit_lock_ = true

[node name="Sardinas Button" type="Button" parent="."]
offset_left = 551.0
offset_top = 330.0
offset_right = 618.0
offset_bottom = 395.0

[node name="Sardinas Sprite" type="Sprite2D" parent="Sardinas Button"]
position = Vector2(34, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
frame = 12
metadata/_edit_lock_ = true

[node name="Toyo Button" type="Button" parent="."]
offset_left = 280.0
offset_top = 378.0
offset_right = 347.0
offset_bottom = 443.0

[node name="Toyo Sprite" type="Sprite2D" parent="Toyo Button"]
position = Vector2(34, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_1ehxy")
hframes = 2
vframes = 8
frame = 14
metadata/_edit_lock_ = true

[node name="Purchase Button" type="Button" parent="."]
offset_left = 772.0
offset_top = 482.0
offset_right = 1012.0
offset_bottom = 535.0
text = "Purchase"

[node name="PlayerStatsLabel" type="Label" parent="."]
offset_left = 770.0
offset_top = 48.0
offset_right = 1005.0
offset_bottom = 76.0
pivot_offset = Vector2(90, 41)
text = "Player Stats"

[node name="EnergyConLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 24.0
offset_right = 255.0
offset_bottom = 50.0
text = "Energy Consumption:"

[node name="SpeedLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 50.0
offset_right = 255.0
offset_bottom = 76.0
text = "Speed:"

[node name="MaxEnergyLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 76.0
offset_right = 255.0
offset_bottom = 102.0
pivot_offset = Vector2(-727, 119)
text = "Max Energy:"

[node name="FoodRateLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 102.0
offset_right = 255.0
offset_bottom = 128.0
pivot_offset = Vector2(-727, 119)
text = "Food Spawn Rate:"

[node name="ReqTimerLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 128.0
offset_right = 255.0
offset_bottom = 154.0
pivot_offset = Vector2(-840, 23)
text = "Requirement Timer:"

[node name="NapEnergyLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 154.0
offset_right = 255.0
offset_bottom = 180.0
pivot_offset = Vector2(-840, 23)
text = "Nap Energy Increase:"

[node name="ReqScoreLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 180.0
offset_right = 255.0
offset_bottom = 206.0
pivot_offset = Vector2(-1009, -16)
text = "Requirement Score Increase:"

[node name="FoodStamLabel" type="Label" parent="PlayerStatsLabel"]
layout_mode = 0
offset_top = 206.0
offset_right = 255.0
offset_bottom = 232.0
pivot_offset = Vector2(-1009, -16)
text = "Food Stamina Increase:"

[node name="ItemLabel" type="Label" parent="."]
offset_left = 773.0
offset_top = 324.0
offset_right = 1007.0
offset_bottom = 350.0
text = "Selected Item Description"

[node name="ItemCostLabel" type="Label" parent="."]
offset_left = 773.0
offset_top = 342.0
offset_right = 1007.0
offset_bottom = 368.0
pivot_offset = Vector2(86, -63)
text = "Item Cost"

[node name="ItemStatsLabel" type="Label" parent="."]
offset_left = 774.0
offset_top = 359.0
offset_right = 1008.0
offset_bottom = 467.0
text = "Item Stats"

[node name="Reset Data Button" type="Button" parent="."]
offset_left = 398.0
offset_top = 3.0
offset_right = 516.0
offset_bottom = 48.0
text = "Reset Stats"

[connection signal="button_down" from="Control/goToMainMenu" to="." method="_on_goToMainMenu_button_down"]
[connection signal="pressed" from="Gatorade Button" to="." method="_on_gatorade_button_pressed"]
[connection signal="pressed" from="Candy Button" to="." method="_on_candy_button_pressed"]
[connection signal="pressed" from="Kopiko Button" to="." method="_on_kopiko_button_pressed"]
[connection signal="pressed" from="Taho Button" to="." method="_on_taho_button_pressed"]
[connection signal="pressed" from="Milk Button" to="." method="_on_milk_button_pressed"]
[connection signal="pressed" from="Strips Button" to="." method="_on_strips_button_pressed"]
[connection signal="pressed" from="Sardinas Button" to="." method="_on_sardinas_button_pressed"]
[connection signal="pressed" from="Toyo Button" to="." method="_on_toyo_button_pressed"]
[connection signal="pressed" from="Purchase Button" to="." method="_on_purchase_button_pressed"]
[connection signal="pressed" from="Reset Data Button" to="." method="_on_reset_data_button_pressed"]
